# pen_engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
cmake/: FindGLFW3.cmake  FindOpenGL.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake
dependencies/glad/: glad.h
dependencies/glfw/include/: glfw3.cpp  glfw3.h  glfw3native.h
examples/: example.cpp  example_gui.cpp  max_grid_area.cpp  wave_algorithm.cpp
ext/ai/: README.md  action.cpp  action.h  agent.cpp  agent.h  ai_state.cpp  ai_state.h  free_agent.cpp  free_agent.h  replay_buffer.cpp  replay_buffer.h  weight.cpp  weight.h
ext/misc/tile_map/: tile_map.h
src/: glad.c  pen_engine.cpp  pen_engine.h
src/core/: character.h  color.h  index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_schema.h
src/objects/: item.cpp  item.h  item_3d.cpp  item_3d.h  layer.cpp  layer.h  layer_3d.cpp  layer_3d.h  shape.cpp  shape.h
src/objects/containers/: json.h  map.h
src/ops/matrices/: mat.cpp  mat.h  mat2x4.cpp  mat2x4.h  mat3x3.cpp  mat3x3.h  mat4x4.cpp  mat4x4.h
src/ops/operations/: 3d.h  operations.h  trig.h
src/ops/vectors/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/renderer/: camera.cpp  camera.h  render.cpp  render.h  renderer.cpp  renderer.h
src/state/: animate.cpp  animate.h  asset.cpp  asset.h  config.h  keys.h  layer_manager.h  pixel.h  pixel_3d.h  state.cpp  state.h
src/ui/: animation.cpp  animation.h  button.cpp  button.h  context_window.cpp  context_window.h  div.cpp  div.h  file_modal.cpp  file_modal.h  key_board.cpp  key_board.h  nav_bar.cpp  nav_bar.h  position.h  scroll_bar.cpp  scroll_bar.h  slider.cpp  slider.h  text_box.cpp  text_box.h  text_character_item.cpp  text_character_item.h  text_editor.cpp  text_editor.h  ui_object.cpp  ui_object.h  vertical_list.cpp  vertical_list.h
src/ui/animation/: animation_3d.cpp  animation_3d.h  animation_pixel_2d.cpp  animation_pixel_2d.h  animation_pixel_3d.cpp  animation_pixel_3d.h  animation_ui.cpp  animation_ui.h
src/util/: dirent_mac.h  dirent_win.h
src/util/stb_image/: stb_image.cpp  stb_image.h
